[#12] Avoid scrollbars in the graphs by making them smaller
It seems like a problem in Flot, where it doesn't respect the canvas' sizes,
drawing over it.  From some tests, I found that 99% height works for all
graphs, but the pie needs a smaller width.

--- a/ckanext/basiccharts/theme/public/basiccharts.css
+++ b/ckanext/basiccharts/theme/public/basiccharts.css
@@ -7,8 +7,12 @@
 }
 
 .dashboard-grid .basicChart {
-  height: 100%;
+  height: 99%;
   width: 100%;
+}
+
+.dashboard-grid .basicChart.pie {
+  width: 90%;
 }
 
 .basicChart .pieLabel div {
